--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,6 @@ jobs:
       - name: Upload VST3 artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: aGain-${{matrix.os}}
+          name: aClip-${{matrix.os}}
           path: build/aClip_artefacts/${{env.BUILD_TYPE}}/VST3/*.vst3
 
